################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier@barvaux.org>
#	Description: ensure that contrib/ content is embedded in dist archives
################################################################################

EXTRA_DIST = \
	README \
	uncrustify.cfg

